[gd_scene load_steps=9 format=3 uid="uid://b3b31g8odud85"]

[ext_resource type="Texture2D" uid="uid://bd4jbsllbym88" path="res://Art/Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Tilesets/Doors.png" id="1_hdoum"]
[ext_resource type="Script" path="res://Interactive Objects/door.gd" id="1_uraap"]

[sub_resource type="Animation" id="Animation_ynq7b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_bcpx6"]
resource_name = "opening"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 3, 2]
}

[sub_resource type="Animation" id="Animation_epwga"]
resource_name = "close_door"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q4n6d"]
_data = {
"RESET": SubResource("Animation_ynq7b"),
"close_door": SubResource("Animation_epwga"),
"open_door": SubResource("Animation_bcpx6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ye8kv"]
size = Vector2(16.5, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_ivovn"]
radius = 14.0

[node name="Door" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_uraap")

[node name="DoorSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_hdoum")
vframes = 4
frame = 1

[node name="DoorAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q4n6d")
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-0.25, 6)
shape = SubResource("RectangleShape2D_ye8kv")

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="AreaOfDetector" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_ivovn")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
